tests/parsing/smtlib/v2.6/errors/041_index_identifier_bad_symbol_2.expected
File "tests/parsing/smtlib/v2.6/errors/041_index_identifier_bad_symbol_2.smt2", line 2, character 11-12:
2 | (assert (_ _))
               ^
Error while parsing an indexed identifier, read the reserved word '_',
      but expected a symbol; note that keywords and reserved words (such as
      '_', 'as', ...) are not symbols, and thus are not allowed here.
